--- a/SHA_Shop/Views/ShopCart/ShopCartPartial.cshtml
+++ b/SHA_Shop/Views/ShopCart/ShopCartPartial.cshtml
@@ -1,8 +1,5 @@
-﻿<style>
-    
-</style>
-
+﻿
 <li>
-    <a href="@Url.Action("Index", "ShopCart")"><i class="fa fa-shopping-bag"></i> <span>@ViewBag.TotalQuantity</span></a>
+    <a href="@Url.Action("Index", "ShopCart")"><i class="fa fa-shopping-cart"></i> <span>@ViewBag.TotalQuantity</span></a>
 </li>
 
