--- a/SHA_Shop/Views/Category/CategoryPartial.cshtml
+++ b/SHA_Shop/Views/Category/CategoryPartial.cshtml
@@ -6,8 +6,11 @@
         foreach (var item in Model)
         {
 
-            <li><a href="@Url.Action("CategoryProduct", "Product", new { id = item.MaDM})">@item.TenDM</a></li>
-        }
+            <li>
+                @*<a href="@Url.Action("CategoryProduct", "Product", new { id = item.MaDM})">@item.TenDM</a>*@
+                @Html.ActionLink(@item.TenDM, "Index", "Product", new { page = 1, category = @item.MaDM }, null)
+            </li>
+    }
     }
 </ul>
 
