--- a/SHA_Shop/Views/Product/Index.cshtml
+++ b/SHA_Shop/Views/Product/Index.cshtml
@@ -24,8 +24,8 @@
             <div class="col-lg-9">
                 <div class="hero__search">
                     <div class="hero__search__form">
-                        <form action="#">
-                            <input type="text" placeholder="Bạn cần tìm gì?">
+                        <form action="@Url.Action("Index", "Product", FormMethod.Get)">
+                            <input type="text" name="search" placeholder="Bạn cần tìm gì?">
                             <button type="submit" class="site-btn">Tìm kiếm</button>
                         </form>
                     </div>
