--- a/SHA_Shop/Views/Product/ListProduct.cshtml
+++ b/SHA_Shop/Views/Product/ListProduct.cshtml
@@ -42,7 +42,7 @@
                 </div>
                 <div class="product__item__text">
                     <h6><a href="/">@item.TenSP</a></h6>
-                    <h5>@item.GiaSP₫</h5>
+                    <h5>@item.GiaSP ₫</h5>
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
 <div class="col-md-12">
     Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber)/@Model.PageCount
     <div class="pagination">
-        @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page }))
+        @Html.PagedListPager(Model, page => Url.Action("Index", new { page = page, category = ViewBag.category }))
     </div>
 
 </div>
