--- a/SHA_Shop/Views/ShopCart/ConfirmOrder.cshtml
+++ b/SHA_Shop/Views/ShopCart/ConfirmOrder.cshtml
@@ -1,29 +1,16 @@
 ﻿
 @{
-    ViewBag.Title = "ShopCartNull";
+    ViewBag.Title = "ConfirmOrder";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <style>
-    .empty {
-        background: rgb(255, 255, 255);
-        padding: 40px 20px;
-        border-radius: 4px;
+    .container.confirmorder {
         text-align: center;
-        width: 100%;
+        min-height: 60vh;
+        align-items: center;
+        display: flex;
     }
-
-        .empty img {
-            width: 190px;
-        }
-
-        .empty a {
-            background-color: #ff3a95;
-            color: #ffff;
-            font-weight: 500;
-            padding: 10px 55px;
-            display: inline-block;
-            border-radius: 4px;
-        }
 </style>
 
 <!-- Hero Section Begin -->
@@ -42,8 +29,8 @@
             <div class="col-lg-9">
                 <div class="hero__search">
                     <div class="hero__search__form">
-                        <form action="#">
-                            <input type="text" placeholder="Bạn cần tìm gì?">
+                        <form action="@Url.Action("Index", "Product", FormMethod.Get)">
+                            <input type="text" name="search" placeholder="Bạn cần tìm gì?">
                             <button type="submit" class="site-btn">Tìm kiếm</button>
                         </form>
                     </div>
@@ -68,10 +55,10 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <div class="breadcrumb__text">
-                    <h2>Giỏ hàng</h2>
+                    <h2>Đặt hàng</h2>
                     <div class="breadcrumb__option">
                         <a href="/">Trang chủ</a>
-                        <span>Giỏ hàng</span>
+                        <span>Đặt hàng</span>
                     </div>
                 </div>
             </div>
@@ -80,8 +67,10 @@
 </section>
 <!-- Breadcrumb Section End -->
 
-<div class="empty">
-    <img src="~/Assets/user/img/banner/shopping-cart.png" />
-    <p style="margin: 15px 0px 30px">Không có sản phẩm nào trong giỏ hàng của bạn.</p>
-    <a href="/Product">Tiếp tục mua bánh</a>
+<div class="container confirmorder">
+    <div>
+        <h2>Đơn hàng của quý khác đã được chúng tôi ghi nhận. Chúng tôi sẽ liên hệ với quý khách trong thời gian sớm nhất và giao hàng đúng hẹn</h2>
+        @Html.ActionLink("Về tranng chủ", "Index", "Home")
+    </div>
 </div>
+
