--- a/SHA_Shop/Views/ShopCart/Index.cshtml
+++ b/SHA_Shop/Views/ShopCart/Index.cshtml
@@ -22,8 +22,8 @@
             <div class="col-lg-9">
                 <div class="hero__search">
                     <div class="hero__search__form">
-                        <form action="#">
-                            <input type="text" placeholder="Bạn cần tìm gì?">
+                        <form action="@Url.Action("Index", "Product", FormMethod.Get)">
+                            <input type="text" name="search" placeholder="Bạn cần tìm gì?">
                             <button type="submit" class="site-btn">Tìm kiếm</button>
                         </form>
                     </div>
@@ -115,10 +115,6 @@
             <div class="col-lg-12">
                 <div class="shoping__cart__btns">
                     <a href="/Product" class="primary-btn cart-btn">Tiếp tục mua bánh</a>
-                    <a href="@Url.Action("UpdateShopCart", "ShopCart"@*, new {@iMaSP = Model.iMaSP }*@)" class="primary-btn cart-btn cart-btn-right">
-                        <span class="icon_loading"></span>
-                        Cập nhật
-                    </a>
                 </div>
             </div>
             <div class="col-lg-6">
@@ -138,8 +134,8 @@
                     <ul>
                         <li>Số lượng bánh <span>@ViewBag.TotalQuantity</span></li>
                         <li>Tổng tiền<span>@string.Format("{0:0,0}", ViewBag.SubTotal) ₫</span></li>
-                    </ul>
-                    <a href="#" class="primary-btn">Thanh toán</a>
+                    </ul>                   
+                    <a href="@Url.Action("CheckOut", "ShopCart", FormMethod.Get)" class="primary-btn">Đặt hàng</a>
                 </div>
             </div>
         </div>
