--- a/SHA_Shop/Views/Product/Index.cshtml
+++ b/SHA_Shop/Views/Product/Index.cshtml
@@ -92,7 +92,7 @@
                 </div>
                 <div class="product__discount">
                     <div class="section-title product__discount__title">
-                        <h2>Sale Off</h2>
+                        <h2>Giảm giá</h2>
                     </div>
                     <div class="row">
                         <div class="product__discount__slider owl-carousel">
