--- a/SHA_Shop/Views/Home/Index.cshtml
+++ b/SHA_Shop/Views/Home/Index.cshtml
@@ -75,7 +75,7 @@
 
 <!-- Categories Section End -->
 <!-- Blog Section Begin -->
-<section class="from-blog spad">
+@*<section class="from-blog spad">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -132,5 +132,5 @@
             </div>
         </div>
     </div>
-</section>
+</section>*@
 <!-- Blog Section End -->
