--- a/SHA_Shop/Views/Contact/Index.cshtml
+++ b/SHA_Shop/Views/Contact/Index.cshtml
@@ -64,21 +64,21 @@
             <div class="col-lg-3 col-md-3 col-sm-6 text-center">
                 <div class="contact__widget">
                     <span class="icon_phone"></span>
-                    <h4>Phone</h4>
-                    <p>+01-3-8888-6868</p>
+                    <h4>Điện thoại</h4>
+                    <p>0367 888 655</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 text-center">
                 <div class="contact__widget">
                     <span class="icon_pin_alt"></span>
-                    <h4>Address</h4>
-                    <p>60-49 Road 11378 New York</p>
+                    <h4>Địa chỉ</h4>
+                    <p>Quận 9, TP.HCM</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 text-center">
                 <div class="contact__widget">
                     <span class="icon_clock_alt"></span>
-                    <h4>Open time</h4>
+                    <h4>Giờ mở cửa</h4>
                     <p>10:00 am to 23:00 pm</p>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                 <div class="contact__widget">
                     <span class="icon_mail_alt"></span>
                     <h4>Email</h4>
-                    <p>hello@colorlib.com</p>
+                    <p>hello@gmail.com</p>
                 </div>
             </div>
         </div>
