--- a/SHA_Shop/Views/Home/LatestProducts.cshtml
+++ b/SHA_Shop/Views/Home/LatestProducts.cshtml
@@ -6,7 +6,7 @@
         object-fit: cover;
     }
 </style>
-<section class="categories mt-5">
+<section class="categories mt-5 mb-5 pb-5">
     <div class="container">
         <div class="section-title from-blog__title mb-5">
             <h2 class="mb-4 text-center">Sản phẩm mới nhất</h2>
