--- a/SHA_Shop/Areas/Admin/Views/Shared/_MainLayoutAdmin.cshtml
+++ b/SHA_Shop/Areas/Admin/Views/Shared/_MainLayoutAdmin.cshtml
@@ -119,7 +119,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="@Url.Action("Index","Slide")">Quản Lý Slider</a>
                         <a class="collapse-item" href="@Url.Action("Index","Contact")">Quản Lý Liên Hệ</a>
-                        <a class="collapse-item" href="@Url.Action("Index","MainAdmin")">Quản Lý Phản Hồi</a>
+                        <a class="collapse-item" href="@Url.Action("Index","Feedback")">Quản Lý Phản Hồi</a>
                     </div>
                 </div>
             </li>
