--- a/SHA_Shop/Views/User/Login.cshtml
+++ b/SHA_Shop/Views/User/Login.cshtml
@@ -31,12 +31,19 @@
         form.user .form-control-user, .btn.btn-primary.btn-user.btn-block, .small {
             font-size: 1rem;
         }
+
+        .img-left {
+            background-image: url(https://scontent-sin6-2.xx.fbcdn.net/v/t1.15752-9/72739091_502461843937781_2917077654991536128_n.png?_nc_cat=108&ccb=2&_nc_sid=ae9488&_nc_ohc=oiuXGY6DcsoAX-vRZib&_nc_ht=scontent-sin6-2.xx&oh=2586b78f19f1fd88f4214312d64dacaa&oe=60320E2F);
+        }
     </style>
 
     <div class="container">
         <div class="row px-2">
             <div class="col-lg-7 card flex-row mx-auto px-0" style="margin-top: 120px">
-                <div class="img-left d-none d-md-flex"></div>
+                <div class="img-left d-none d-md-flex">
+                    
+                </div>
+                
                 <div class="card-body">
 
                     <h3 class="title text-center mt-4 text-gray-900 font-weight-bold mb-4">
