--- a/SHA_Shop/Areas/Admin/Views/AccountList/Edit.cshtml
+++ b/SHA_Shop/Areas/Admin/Views/AccountList/Edit.cshtml
@@ -21,7 +21,11 @@
                     <div class="col-lg-6">
 
                         @using (Html.BeginForm("Edit", "AccountList", FormMethod.Post)) //<form class='user'>
-                        {                          
+                        {
+                            <div class="form-group">
+                                <label>ID Người Dùng</label>
+                                @Html.TextBoxFor(m => m.IDNguoiDung, new { @class = "form-control", placehover = "ID Người Dùng" })
+                            </div>
 
                             <div class="form-group">
                                 <label>Tài Khoản</label>
@@ -48,7 +52,7 @@
                                 @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placehover = "Email" })
                             </div>
 
-                            <a href="@Url.Action("Index","AccountList")" class="btn btn-default" style="color: #ea2c62">Quay lại danh sách</a>
+                            <a href="@Url.Action("Index","AccountList")" class="btn btn-default">Quay lại danh sách</a>
                             <button type="submit" class="btn btn-primary">Chỉnh Sửa</button>
 
                         }
