--- a/SHA_Shop/Areas/Admin/Views/Contact/Index.cshtml
+++ b/SHA_Shop/Areas/Admin/Views/Contact/Index.cshtml
@@ -24,31 +24,26 @@
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                     <thead>
                         <tr>
-                            <th>ID</th>
-                            <th>Tên</th>
+                            <th>ID Liên hệ</th>
+                            <th>Họ Tên</th>
                             <th>SĐT</th>
                             <th>Email</th>
                             <th>Nội dung</th>
-                            <th>Ngày</th>
-                            <th>Trạng thái</th>
-                            <th colspan="2" style="text-align:center;">Tùy chỉnh</th>
+                            <th>Ngày Liên Hệ</th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr>
-                                <td>@item.ID</td>
-                                <td>@item.Ten</td>
-                                <td>@item.SDT</td>
-                                <td>@item.Email</td>
-                                <td>@item.NoiDung</td>
-                                <td>@item.NgayLH</td>
-                                <td>@item.TrangThai</td>
-                                <td><a href="@Url.Action("Edit","Contact",new { id=item.ID})"><img src="~/Areas/AssetAdmin/img/anhedit24.png"></a></td>
-                                <td><a href="@Url.Action("Delete","Contact",new { id=item.ID})"><img src="~/Areas/AssetAdmin/img/2530784-24.png"></a></td>
-
-                            </tr>
+                        <tr>
+                            <td>@item.ID</td>
+                            <td>@item.Ten</td>
+                            <td>@item.SDT</td>
+                            <td>@item.Email</td>
+                            <td>@item.NoiDung</td>
+                            <td>@item.NgayLH</td>
+                            <td><a href="@Url.Action("Delete","Contact",new { id=item.ID})"><img src="~/Areas/AssetAdmin/img/2530784-24.png"></a></td>
+                        </tr>
                         }
                     </tbody>
                 </table>
