--- a/SHA_Shop/Areas/Admin/Views/Product/Edit.cshtml
+++ b/SHA_Shop/Areas/Admin/Views/Product/Edit.cshtml
@@ -22,14 +22,19 @@
                     {
 
                         <div class="form-group">
+                            <label>Mã sản phẩm</label>
+                            @Html.TextBoxFor(m => m.MaSP, new { @class = "form-control", placehover = "Mã sản phẩm" })
+                        </div>
+
+                        <div class="form-group">
                             <label>Tên sản phẩm</label>
                             @Html.TextBoxFor(m => m.TenSP, new { @class = "form-control", placehover = "Tên sản phẩm" })
                         </div>
 
-                        <div>
-                            <img src="@Model.hinhCu" style="max-width: 100px !important;" />
+                        <div class="form-group">
+                            <label>Ảnh trước đó</label>
+                            <img style="width:200px; height:250px;" src="@Model.hinhCu" />
                         </div>
-
                         <div class="form-group">
                             <label>Chọn thư mục Ảnh</label>
                             <input type="file" name="ProductImage" required />
